# rating-map

./: .gitignore  docker-compose.yaml  pyproject.toml
entertainment/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
entertainment/migrations/: 0001_initial.py  0002_comment_alter_place_type_rate.py  0003_alter_comment_related_comments.py  0004_alter_rate_comment.py  0005_alter_rate_place.py  0006_alter_rate_user.py  0007_alter_rate_rating.py  0008_alter_rate_unique_together.py  0009_alter_comment_created_at_alter_rate_created_at.py  0010_alter_comment_options_alter_rate_options_and_more.py  0011_alter_comment_options.py  0012_alter_place_type.py
rating/: asgi.py  settings.py  urls.py  wsgi.py
user/: serializers.py  urls.py
